# dependencies

./: .gitignore
database/DatabaseConnector/: core.py
js/parser/: exchange.js  index.js  package.json  supported.js
parser/: setup.py
parser/TickerParserJs/: core.js  exchange.js  package.json  supported.js
parser/TickerParserPy/: exchange.py
processor/Processor/: core.py
py/commands/: setup.py
py/commands/CommandRequest/: core.py
py/database/: setup.py
py/database/DatabaseConnector/: core.py  sync.py
py/messages/: setup.py
py/messages/MessageRequest/: core.py
py/parser/: setup.py
py/parser/TickerParser/: __init__.py  core.py  exchange.py  supported.py  sync.py
py/processor/: setup.py
py/processor/Processor/: __init__.py  autocomplete.py  commands.py  core.py  parser.py  relays.py
py/requests/DataRequest/: abstract.py  chart.py  detail.py  heatmap.py  parameter.py  price.py  trade.py
requests/DataRequest/: abstract.py  chart.py  detail.py  heatmap.py  price.py  trade.py
rs/database/: Cargo.toml
rs/database/src/: lib.rs
rs/database/src/structs/: account.rs  guild.rs  mod.rs
rs/processor/: Cargo.toml
rs/processor/src/: commands.rs  lib.rs
